Update Spotless and ErrorProne to latest versions with IntelliJ-style formatting
- Update Spotless plugin from 7.0.2 to 8.1.0
- Update ErrorProne Gradle plugin from 4.1.0 to 4.3.0
- Update ErrorProne core from 2.31.0 to 2.45.0
- Configure Spotless with Eclipse formatter using IntelliJ-like settings
- Add spotless.xml configuration file for consistent formatting
- Configure import order to match IntelliJ defaults
- Apply formatting to all Java and Kotlin Gradle files
- Maintain existing code style with minimal changes (mostly Javadoc alignment)